@@ -5,6 +5,7 @@ Changes from 1.15.0 to 1.14.0
 ** Bug
     * [FELIX-4192] - SCR Generator fails with a NPE in case a class level Reference doesn't define a referenceInterface
     * [FELIX-4010] - SCR Plugin aborts when scanning a Java 8 class file
+    * [FELIX-4246] - SCR and Metatype descriptor files get deleted on subsequent (incremental) eclipse build
 
 
 Changes from 1.14.0 to 1.13.0
